2001-02-17  Alain Malgoire

	* doc/grep.texi : Document the new options and the new behaviour
	back-references are local.  Use excerpt from Karl Berry regex
	texinfo.

	* bootstrap/Makefile.try : Added xstrtoumax.o xstrtoul.o hard-local.o

2001-02-17  Alain Magloire

	From Guglielmo 'bond' Bondioni :
	The bug was that using a multi line file that contained REs (one per
	line), backreferences in the REs were considered global (to the file)
	and not local (to the line).
	That is, \1 in line n refers to the first \(.\) in the whole file,
	rather than in the line itself.

	From Tapani Tarvainen :
	# Re: grep -e '\(a\)\1' -e '\(b\)\1'
	That's not the way it should work: multiple -e arguments
	should be treated as independent patterns and back references
	should not refer to previous ones.

	From Paul Eggert :
	GNU grep currently does not issue
	diagnostics for the following two cases, both of which are erroneous:
	grep -e '[' -e ']'
	grep '[
	]'
	POSIX requires a diagnostic in both cases because '[' is not a valid
	regular expression.

	To overcome those problems, grep no longer pass the concatenate
	patterns to GNU regex but rather compile each patterns separately
	and keep the result in an array.

	* src/search.c (patterns) : New global variable; a structure array
	holding the compiled patterns.
	Declare function prototypes to minimize error.
	(dfa, kswset, regexbuf, regs) : Removed, no longer static globals, but
	rather fields in patterns[] structure per motif.
	(Fcompile) : Alloc an entry in patterns[] to hold the regex.
	(Ecompile) : Alloc an entry per motif in the patterns[] array.
	(Gcompile) : Likewise.
	(EGexecute) : Loop through of array of patterns[] for a match.

2001-02-17  Alain Magloire

	From Bernd Strieder :
	# tail -f logfile | grep important | do_something_urgent
	# tail -f logfile | grep important | do_something_taking_very_long
	If grep does full buffering in these cases then the urgent operation